# entropix-local

./: .env.example  .gitignore  CONTRIBUTION.md  README.md  entropix_local_torch.ipynb  pyproject.toml
entropix/: jax_single_file.py  torch_single_file.py
entropix/local/: config.py  jax_single_file.py  mlx_weights.py  tokenizer.py  visuals.py  weights.py
entropix/local/mlx/: dslider.py  dslider_config.py  dslider_utils.py  kvcache.py  main.py  metrics.py  mlx_weights.py  model.py  sampler.py  utils.py
entropix/local/torch/: dslider.py  dslider_config.py  dslider_utils.py  engine.py  hf_main.py  kvcache.py  main.py  metrics.py  model.py  orchestrator.py  prompts.py  sampler.py  server_main.py  token_utils.py  torch_single_file.py  utils.py  visualize.py
entropix/prompts/: prompts.csv
