[project]
name = "entropix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blobfile>=3.0.0",
    "huggingface-hub[cli]>=0.25.2",
    "jax[cuda12]>=0.4.34",
    "tiktoken>=0.8.0",
    "transformers>=4.45.2",
    "tyro>=0.8.12",
]
