[project]
name = "entropix"
version = "0.1.0"
description = "entropix sampler, designed to work locally on windows and mac edge devices."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blobfile>=3.0.0",
    "huggingface-hub[cli]>=0.25.2",
    "jax>=0.4.35",
    "matplotlib>=3.9.2",
    "mlx>=0.19.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "transformers>=4.45.2",
    "tyro>=0.8.12",
]
